<resources>
    <string name="app_name">DinhTruong</string>
    <string name="signUpActivity">SignUpActivity</string>
    <string name="userName">Username</string>
    <string name="passWord">Password</string>
    <string name="email">Email</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="emailSubscriptions">Email subscriptions</string>
    <string name="allowEmailFromOther">Allow email from other</string>
    <string name="userFormatWrong">User Format Wrong!</string>
    <string name="passWordFormatWrong">Password Format Wrong!</string>
    <string name="emailAddressFormatWrong">Email Address Format Wrong!</string>
    <string name="actionSettings">Settings</string>
    <string name="sectionFormat">Hello World from section: %1$d</string>
    <string name="profile">Profile</string>
    <string name="todo">TODO</string>
    <string name="message">Message</string>
    <string name="beatriceMaxwell">Beatrice Maxwell</string>
    <string name="location">Location</string>
    <string name="slovakia">Slovakia</string>
    <string name="posts">Posts</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="news">News</string>
    <string name="view">View and View Group </string>
    <string name="Loading">Loading</string>
    <string name="content">content</string>
    <string name="iconLoading">Icon Loading</string>
    <string name="aCityLivingUnderTheShadows">A City Living Under the Shadows</string>
    <string name="aCityLivingUnderTheShadow">A City Living Under the Shadow</string>
    <string name="oneProblemForDemocaraticLeaders">One Problem for Democaratic Leaders</string>
    <string name="howToPlanYourFirstSkiVacation">How to Plan Your First Ski Vacation</string>
    <string name="howSocialIsolationIsKillingUs">How Social Isolation Is Killing Us</string>
    <string name="theGoldenSecretToBetterBreakfast">The Golden Secret To Better Breakfast</string>
    <string name="useLabelsToSortMessagesInFacebook">Use Labels To Sort Messages In Facebook</string>
    <string name="rBCNews">RBC News</string>
    <string name="nYTimes">NY Times</string>
    <string name="bBCWorld">BBC World</string>
    <string name="nBCNightly">NBC Nightly</string>
    <string name="eventAndListener">Event And Listener</string>
    <string name="passwordFormatWrong">Password format Wrong!</string>
    <string name="confirmPasswordWrong">Confirm Password Wrong!</string>
    <string name="signup">Signup</string>
    <string name="login">Log in</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="emailFormatWrong">Email Format Wrong!</string>
    <string name="activityAndFragment">Activity And Fragment</string>
    <string name="compose">Compose</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">sayabaaa</string>
    <string name="like">like</string>
    <string name="likes">likes</string>
    <string name="recyclerView">RecyclerView</string>
    <string name="viewPager">View Pager</string>
    <string name="pager">Pager</string>
    <string name="favourite">Favourite</string>
    <string name="maNhanVien">Employee ID</string>
    <string name="tenNhanVien">Employee Name</string>
    <string name="update">Update</string>
    <string name="insert">Insert</string>
    <string name="delete">Delete</string>
    <string name="internal">Internal</string>
    <string name="external">External</string>
    <string name="updateSuccessfully">Update Successfully!</string>
    <string name="updateFailed">Update Failed!</string>
    <string name="sharePreference">SHARE PREFERENCE</string>
    <string name="internalAndExternal">INTERNAL AND EXTERNAL</string>
    <string name="loginSuccessful">Login successful!</string>
    <string name="sQLite">SQLITE</string>
    <string name="pleaseFillTheEmployeeName">Please fill the employee name!</string>
    <string name="updateError">Update Error!</string>
    <string name="permissionCancelled">Permission Cancelled!</string>
    <string name="fileStorage">File Storage</string>
    <string name="saved">saved</string>
    <string name="saveFileSuccessfully">Save file successfully!</string>
    <string name="inputOutputException">Input Output Exception!</string>
    <string name="charSet">UTF-8</string>
    <string name="filePath">ThuMucCuaToi</string>
    <string name="deleteError">Delete error</string>
    <string name="danhSachCongTy">Danh Sách Công Ty</string>
    <string name="idCompany">idCompany</string>
    <string name="fileNameInternal">internalStorage.txt</string>
    <string name="insertError">Insert Error!</string>
    <string name="restApi">REST API</string>
    <string name="camera">Camera</string>
    <string name="library">Library</string>
    <string name="title">Title</string>
    <string name="accept">Accept!</string>
    <string name="selectPicture">Select picture!</string>
    <string name="permissionDenied">Permission denied!</string>
    <string name="data">data</string>
    <string name="uploadCompleted">Upload completed!</string>
    <string name="uploadFailed">Upload failed!</string>
    <string name="loadImagesFailse">Load Images Failse!</string>
    <string name="loading">Loading...</string>
    <string name="asynctaskThreadHandler">AsyncTask - Thread - Handler</string>
    <string name="download">Download</string>
    <string name="asyncTask">Async Task</string>
    <string name="handler">Handler</string>
    <string name="thread">Thread</string>
    <string name="inputOoutputException">InputOutputException</string>
    <string name="getBitmapFromURL">getBitmapFromURL:</string>
    <string name="downloadingFile">Downloading file...</string>
    <string name="canvas">Canvas</string>
    <string name="salesAndExpenses">Sales and Expenses</string>
    <string name="sales">Sales</string>
    <string name="expenses">Expenses</string>
    <string name="usd">$</string>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string name="unitTest">Unit Test</string>
    <string name="incorrectPassword">Incorrect password</string>
    <string name="orLogInUsingASocialAccount">Or log in using a social account</string>
    <string name="takePhoto">Take Photo</string>
    <string name="chooseFromLibrary">Choose from Library</string>
    <string name="cancel">Cancel</string>
    <string name="permissionAccepted">Permission Accepted</string>
    <string name="addPhoto">Add Photo!</string>
    <string name="drawerLayout">DrawerLayout</string>
    <string name="dinhTruongAsiantechVn">dinhtruong@asiantech.vn</string>
    <string name="inbox">Inbox</string>
    <string name="outbox">Outbox</string>
    <string name="trash">Trash</string>
    <string name="spam">Spam</string>
    <string name="acceptDialog">Accept Dialog</string>
    <string name="youHaveDeniedPermission">You have denied permission!</string>
    <string name="setting">Setting</string>
    <string name="cancle">Cancle</string>
    <string name="denied">Denied</string>
    <string name="servicesBroadcast">Services Broadcast</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="timeMusicPlayer">--:--</string>
    <string name="channelName">Channel Notification</string>
    <string name="channelDescription">Channel Notification Description</string>
    <string name="pleasePauseBeforeClose">Please pause before close</string>
</resources>
