<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:background="@drawable/imageheader">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        tools:ignore="UselessParent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/layout_margin_10dp"
                            android:orientation="horizontal"
                            tools:ignore="UselessParent">

                            <Button
                                android:id="@+id/btnBack"
                                android:layout_width="0dp"
                                android:layout_height="@dimen/layout_height_18dp"
                                android:layout_weight="1"
                                android:background="@drawable/iconbeheader" />

                            <TextView
                                android:id="@+id/tvProfile"
                                style="@style/Text"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="16"
                                android:text="@string/profile"
                                android:textAlignment="center" />

                            <Button
                                android:layout_width="0dp"
                                android:layout_height="@dimen/layout_height_8dp"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:background="@drawable/dot" />

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/layout_height_1dp"
                            android:background="@android:color/white" />
                    </LinearLayout>

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/layoutAvatar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_marginLeft_30dp"
                    android:layout_marginTop="@dimen/layout_marginTop_55dp"
                    android:layout_marginRight="@dimen/layout_marginRight_30dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/btnCheck"
                        android:layout_width="@dimen/layout_width_50dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/buttonblue"
                        android:contentDescription="@string/todo"
                        android:padding="@dimen/padding_10dp"
                        android:src="@drawable/tick" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="@dimen/layout_width_130dp"
                        android:layout_height="@dimen/layout_height_130dp"
                        android:layout_marginLeft="@dimen/layout_marginLeft_35dp"
                        android:layout_marginRight="@dimen/layout_marginRight_35dp"
                        android:src="@drawable/avatar" />

                    <ImageView
                        android:id="@+id/btnMessage"
                        android:layout_width="@dimen/layout_width_50dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/button"
                        android:contentDescription="@string/todo"
                        android:padding="@dimen/padding_10dp"
                        android:src="@drawable/message" />

                </LinearLayout>
            </RelativeLayout>

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/beatrice_maxwell"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size_20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/layoutLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="@dimen/width_30dp"
                    android:layout_height="@dimen/height_30dp"
                    android:contentDescription="@string/location"
                    android:src="@drawable/location" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/margin_start_10dp"
                    android:layout_marginLeft="@dimen/margin_left_10dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/slovakia"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size_15sp"
                    android:textStyle="bold"
                    tools:targetApi="jelly_bean" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_top_10px"
                android:background="@color/colorAccent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_5dp">

                <TextView
                    android:layout_width="@dimen/width_0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/posts"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_size_20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="@dimen/width_0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bookmarks"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size_20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="@dimen/width_0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/news"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_size_20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rcvFirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Loading"
                    android:textColor="@color/colorAccent" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_10dp"
                    android:contentDescription="@string/icon_loading"
                    android:src="@drawable/iconloading" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
